# cube-solver

./: README.md  cube-solver.opam  dune-project  rubics_cube.opam  test.html
_build/: log
css/: style.css
frontend/: package-lock.json  package.json
frontend/src/: app.html
frontend/src/lib/: api.ts  cube.ts  threejs.js  threejs.ts
frontend/src/routes/: +page.svelte
js/: main.js
lib/: cube.ml  cube.mli  dune  move.ml  move.mli  scramble.ml  scramble.mli  solve.ml  solve.mli
test/: dune  rubik_move_test.ml  rubik_solve_test.ml  test_rubics_cube.ml  test_rubics_cube_solve.ml  utils.ml
view/: index.html
